--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <div class="col-lg-8 col-md-6 order-1 order-xs-1 order-sm-1 order-md-0 order-lg-0">
                     <p>
                         Hi! I'm a Senior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
-                        I work in the <a href="https://dykang.github.io/recruit.html" target="_blank">Minnesota NLP Group</a> and 
+                        I work in the <a href="https://dykang.github.io/recruit.html" >Minnesota NLP Group</a> and 
 			<a href="http://dmr.cs.umn.edu/" target="_blank">UMN Data Analysis and Management Research Group</a>. My advisors 
-			are <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a> and
-			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Jaideep Srivastava</a>.
+			are <a href="https://dykang.github.io/index.html#section_home" >Dongyeop Kang</a> and
+			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" >Jaideep Srivastava</a>.
                     </p>
                     <p>		    
 			My research interests are in Machine Learning (ML) and Natural Language Processing (NLP), particularly in its 
@@ -77,32 +77,32 @@
                     </p>
 		    <p>
 		        In order to get more insights about Deep Learning mechanisms and better combine applications with foundational theories, 
-			I start working with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> at 
+			I start working with <a href="http://stat.wharton.upenn.edu/~suw/" >Prof. Weijie Su</a> at 
 			University of Pennsylvania and lead a project about A New Theory of Adversarial Examples and Generalization 
 			in Neural Networks (NN) since May 2022. 
 		    </p>
                     <p>		    		    
-			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan 
-			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" target="_blank">Dr. Saptarashmi 
+			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan 
+			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" >Dr. Saptarashmi 
 			Bandyopadhyay</a> at University of Maryland. Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
-		        target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Mujdat Cetin</a>.
+		        >Signal Processing and Information Systems Laboratory</a>, University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Mujdat Cetin</a>.
                     </p>
 			<!--
                     <p>
                         My research interests include Natural Languaguge Generation, Question Answering, and the Causal Analysis in NLP. 
-		    I'm currently working with <a href="https://dykang.github.io/index.html#section_home" target="_blank">Prof. Dongyeop Kang</a> and 
+		    I'm currently working with <a href="https://dykang.github.io/index.html#section_home" >Prof. Dongyeop Kang</a> and 
 			    focusing on Causal Analysis on Pre-trained Language Models.
 		    We are interested in finding out what cause the model to perform a syntactic generalization behavior from Causal Analysis perspective.
 	            Specifically, we are using ideology from Causal Inference such as counterfactual intervention and cauasl mediation analysis
 	            to uncover the mechanisms that underlie models’ sensitivity to syntactic bias in prompt engineering.
-		Meanwhile, I'm working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan Boyd-Graber</a> 
+		Meanwhile, I'm working with <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan Boyd-Graber</a> 
 			    on Open-domain Question Answering (QA). 
 		    We are working on improving QA systems by synthetic questions using machine translation for question generation and conversion. 
 		    We are also trying to solve the ambiguity issue of question generation and paying attention to the interpretability of 
 		    language models.
                     </p>
 		    <p>
-			Previously, I worked with <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Prof. Jaideep Srivastava</a>
+			Previously, I worked with <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" >Prof. Jaideep Srivastava</a>
 			with the focus on Stance Detection for political affiliation while applying concepts of weak supervision 
 			and knowledge graph for text classification and making sense of data in social media.
 		    </p>
