--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <!-- Hi, this is Nelson. Please DELETE the <script> block below (L6-L13)
           if you use this HTML, otherwise my analytics will track your page. -->
         <title>Hao Zou</title>
+  
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta property="og:url" content="https://haozou-official.github.io/" />
@@ -57,7 +58,7 @@
                     <p>
                         Hi! I'm a Senior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
                         I work in the <a href="https://dykang.github.io/recruit.html" >Minnesota NLP Group</a> and 
-			<a href="http://dmr.cs.umn.edu/" target="_blank">UMN Data Analysis and Management Research Group</a>. My advisors 
+			<a href="http://dmr.cs.umn.edu/" >UMN Data Analysis and Management Research Group</a>. My advisors 
 			are <a href="https://dykang.github.io/index.html#section_home" >Dongyeop Kang</a> and
 			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" >Jaideep Srivastava</a>.
                     </p>
@@ -123,6 +124,7 @@
                   <a href="files/cv.pdf" ><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/hao-zou-05b447248/" > <i class="fa fa-linkedin"></i> LinkedIn </a> &nbsp/&nbsp
                   <a href="https://github.com/haozou-official" > <i class="fa fa-github"></i> GitHub </a> &nbsp/&nbsp
+	          <a href="https://twitter.com/haozou_" > <i class="fa fa-twitter"></i> GitHub </a>
                 </p>
 		<!--
                     <p>
