--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                 <div class="col-lg-8 col-md-6 order-1 order-xs-1 order-sm-1 order-md-0 order-lg-0">
                     <p>
                         Hi! I'm a Senior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
-                        I work in the <a href="https://dykang.github.io/recruit.html" >Minnesota NLP Group</a> and 
-			<a href="http://dmr.cs.umn.edu/" >UMN Data Analysis and Management Research Group</a>. My advisors 
-			are <a href="https://dykang.github.io/index.html#section_home" >Dongyeop Kang</a> and
-			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" >Jaideep Srivastava</a>.
+                        I work in the <a href="https://dykang.github.io/recruit.html" style="text-decoration: none">Minnesota NLP Group</a> and 
+			<a href="http://dmr.cs.umn.edu/" style="text-decoration: none">UMN Data Analysis and Management Research Group</a>. My advisors 
+			are <a href="https://dykang.github.io/index.html#section_home" style="text-decoration: none">Dongyeop Kang</a> and
+			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" style="text-decoration: none">Jaideep Srivastava</a>.
                     </p>
                     <p>		    
 			My research interests are in Machine Learning (ML) and Natural Language Processing (NLP), particularly in its 
@@ -124,7 +124,7 @@
                   <a href="files/cv.pdf" ><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/hao-zou-05b447248/" > <i class="fa fa-linkedin"></i> LinkedIn </a> &nbsp/&nbsp
                   <a href="https://github.com/haozou-official" > <i class="fa fa-github"></i> GitHub </a> &nbsp/&nbsp
-	          <a href="https://twitter.com/haozou_" > <i class="fa fa-twitter"></i> GitHub </a>
+	          <a href="https://twitter.com/haozou_" > <i class="fa fa-twitter"></i> Twitter </a>
                 </p>
 		<!--
                     <p>
