--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         Hi! I'm a Senior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
                         I work in the <a href="https://dykang.github.io/recruit.html" style="text-decoration: none">Minnesota NLP Group</a> and 
 			<a href="http://dmr.cs.umn.edu/" style="text-decoration: none">UMN Data Analysis and Management Research Group</a>. My advisors 
-			are <a href="https://dykang.github.io/index.html#section_home" style="text-decoration: none">Dongyeop Kang</a> and
-			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" style="text-decoration: none">Jaideep Srivastava</a>.
+			are <a href="https://dykang.github.io/index.html#section_home" >Dongyeop Kang</a> and
+			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" >Jaideep Srivastava</a>.
                     </p>
                     <p>		    
 			My research interests are in Machine Learning (ML) and Natural Language Processing (NLP), particularly in its 
@@ -90,7 +90,8 @@
 			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan 
 			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" >Dr. Saptarashmi 
 			Bandyopadhyay</a> at University of Maryland. Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
-		        >Signal Processing and Information Systems Laboratory</a>, University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Mujdat Cetin</a>.
+		        style="text-decoration: none">Signal Processing and Information Systems Laboratory</a>, 
+			University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Mujdat Cetin</a>.
                     </p>
 			<!--
                     <p>
@@ -120,11 +121,11 @@
             <div class="row">
                 <div class="col">
                 <p align=center>
-                  <a href="mailto:zou00080@umn.edu" ><i class="fa fa-envelope"></i> Email</a> &nbsp/&nbsp
-                  <a href="files/cv.pdf" ><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
-                  <a href="https://www.linkedin.com/in/hao-zou-05b447248/" > <i class="fa fa-linkedin"></i> LinkedIn </a> &nbsp/&nbsp
-                  <a href="https://github.com/haozou-official" > <i class="fa fa-github"></i> GitHub </a> &nbsp/&nbsp
-	          <a href="https://twitter.com/haozou_" > <i class="fa fa-twitter"></i> Twitter </a>
+                  <a href="mailto:zou00080@umn.edu" style="text-decoration: none"><i class="fa fa-envelope"></i> Email</a> &nbsp/&nbsp
+                  <a href="files/cv.pdf" style="text-decoration: none"><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
+                  <a href="https://www.linkedin.com/in/hao-zou-05b447248/" style="text-decoration: none"> <i class="fa fa-linkedin"></i> LinkedIn </a> &nbsp/&nbsp
+                  <a href="https://github.com/haozou-official" style="text-decoration: none"> <i class="fa fa-github"></i> GitHub </a> &nbsp/&nbsp
+	          <a href="https://twitter.com/haozou_" style="text-decoration: none"> <i class="fa fa-twitter"></i> Twitter </a>
                 </p>
 		<!--
                     <p>
@@ -148,12 +149,12 @@
                     <ul>
 			<li>
 		            (10/2022) Paper on Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
-			    submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
+			    submitted to <a href="https://2023.eacl.org/" style="text-decoration: none"">EACL 2023</a>.
 			</li>
 			<li>
 		            (6/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
 			    Training QA Systems on Transformed Trivia Questions</a>], 
-			    submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
+			    submitted to <a href="https://2022.emnlp.org/" style="text-decoration: none">EMNLP 2022</a>.
 			</li>
 			<li>
 			    (5/2022) Started working with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> as
@@ -236,6 +237,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 		    <h3>2022</h3>
 		      Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
 				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
+			<br>
 		      <a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
 				Training QA Systems on Transformed Trivia Questions</a>], 
 				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
