--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" >Dr. Saptarashmi 
 			Bandyopadhyay</a> at University of Maryland. Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
 		        style="text-decoration: none">Signal Processing and Information Systems Laboratory</a>, 
-			University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Mujdat Cetin</a>.
+			University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Prof. Mujdat Cetin</a>.
                     </p>
 			<!--
                     <p>
@@ -161,15 +161,15 @@
 		            Research Assistant at UPenn!
 			</li>
 			<li>
-		            (8/2021) Joined <a href="http://cs-u-ada.cs.umn.edu/team/" target="_blank">Minnesota NLP Group</a>
+		            (8/2021) Joined <a href="http://cs-u-ada.cs.umn.edu/team/" style="text-decoration: none">Minnesota NLP Group</a>
 			    under <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a>!
 			</li>
                         <li>
                             (8/2021) Paper on [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
-			    submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
+			    submitted to <a href="https://mrqa.github.io/" style="text-decoration: none">MRQA 2021</a>.
                         </li>
 			<li>
-			    (5/2021) Accepted in Internship program at <a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" target="_blank">CLIP</a>
+			    (5/2021) Accepted in Internship program at <a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" style="text-decoration: none">CLIP</a>
 			    Lab under <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan Boyd-Graber</a>.
 			</li>
 			<li>
@@ -198,7 +198,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
 	  <dt><a href="https://dykang.github.io/not.html" 
-		        target="_blank">Minnesota NLP Group</a></dt>
+		        style="text-decoration: none">Minnesota NLP Group</a></dt>
 	  <dd>August. 2021 - present</dd>
           <dd>Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
 		
@@ -206,7 +206,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Research Intern</dd>
           <dt>University of Maryland, College Park</dt>
 	  <dt><a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" 
-		        target="_blank">CLIP Laboratory</a></dt>
+		        style="text-decoration: none">CLIP Laboratory</a></dt>
           <dd>May. 2021 - present</dd>
           <dd>Advisor: <a href="http://users.umiacs.umd.edu/~jbg/" title="Jordan Boyd-Graber">Jordan Boyd-Graber</a></dd>
           
@@ -214,7 +214,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
 	  <dt><a href="http://dmr.cs.umn.edu/" 
-		        target="_blank">DMR Lab</a></dt>
+		        style="text-decoration: none">DMR Lab</a></dt>
 	  <dd>Sept. 2020 - Aug. 2021</dd> 
           <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a></dd>
 		
@@ -222,7 +222,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Research Intern</dd>
           <dt>University of Rochester, New York</dt>
 	  <dt><a href="http://labs.sabanciuniv.edu/spis/" 
-		        target="_blank">Signal Processing and Information Systems Laboratory</a></dt>
+		        style="text-decoration: none">Signal Processing and Information Systems Laboratory</a></dt>
 	  <dd>Jun. 2020 - Oct. 2020</dd>
           <dd>Advisor: <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" title="Mujdat Cetin">Mujdat Cetin</a></dd>
         </dl>
