--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
 			<br>
 		      <a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
-				Training QA Systems on Transformed Trivia Questions</a>], 
+				Training QA Systems on Transformed Trivia Questions</a>, 
 				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
                     <h3>2021</h3>
                       <a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>, 
