--- a/index.html
+++ b/index.html
@@ -62,24 +62,6 @@
 			are <a href="https://dykang.github.io/index.html#section_home" >Prof. Dongyeop Kang</a> and
 			<a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" >Prof. Jaideep Srivastava</a>.
                     </p>
-                    <p>		    
-			My research interests are in Machine Learning (ML) and Natural Language Processing (NLP), particularly in its 
-			intersections with Robustness and Generalization. To better combine applications with foundational theories, 
-			I share interests in theoretical ML as well, specifically in Deep Learning (DL). Current machine learning techniques
-			fall short of human abilities in both their capacity to learn with causal reasoning and to learn robust prediction 
-			mechanisms. My research aims to (1) understand and improve the robustness in learning, and (2) build interpretable 
-			and trustworthy systems that can communicate effectively with humans and learn from human guidance and controls. 
-
-                        These interests and goals have drawn me toward three main research directions: 
-			<br>(1) Diffusion Models for compositional controllable generations and adversarial robustness; 
-			<br>(2) Causality in NLP; 
-			<br>(3) Understanding Adversarial Examples.
-			    
-			<!-- My research interests include Natural Languaguge Generation, Open-domain Question Answering, and the Causal Analysis
-			in Pre-trained Language Models. My research focuses on understanding and augmenting the generalizability and robustness 
-			of natural language processing systems. In general, I'm insterested in solving Domain Shifting issues in NLP from Causal 
-			Analysis perspectives and linguistics heuristics. -->
-                    </p>
 		    <p>
 		        In order to get more insights about Deep Learning mechanisms and better combine applications with foundational theories, 
 			I start working with <a href="http://stat.wharton.upenn.edu/~suw/" >Prof. Weijie Su</a> at 
@@ -143,6 +125,27 @@
                 -->
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col">
+                    <h2>Research</h2>                    
+                    <p>		    
+			My research interests are in Machine Learning (ML) and Natural Language Processing (NLP), particularly in its 
+			intersections with Robustness and Generalization. To better combine applications with foundational theories, 
+			I share interests in theoretical ML as well, specifically in Deep Learning (DL). Current machine learning techniques
+			fall short of human abilities in both their capacity to learn with causal reasoning and to learn robust prediction 
+			mechanisms. My research aims to (1) understand and improve the robustness in learning, and (2) build interpretable 
+			and trustworthy systems that can communicate effectively with humans and learn from human guidance and controls. 
+
+                        These interests and goals have drawn me toward three main research directions: 
+			<br>(1) Diffusion Models for compositional controllable generations and adversarial robustness; 
+			<br>(2) Causality in NLP; 
+			<br>(3) Understanding Adversarial Examples.
+                    </p>
+                </div>
+            </div>
+
+
             <div class="row">
                 <div class="col">
                     <h2>Recent News</h2>
