--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
 	  <dt><a href="https://dykang.github.io/not.html" 
-		        style="text-decoration: none">Minnesota NLP Group</a></dt>
+		        style="text-decoration: none">Minnesota NLP Group</a>, 
+				    Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dt>
 	  <dd>August. 2021 - present</dd>
-          <dd>Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
 	  <br>
 		
           <img class="img-fluid z-depth-1 rounded" src="/img/umd.png" width='135' height='YYY'>
