--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
 			<br>(3) Understanding Adversarial Examples.
                     </p>
 		    <p>
-		        In order to get more insights about Deep Learning mechanisms and better combine applications with foundational theories, 
-			I start working with <a href="http://stat.wharton.upenn.edu/~suw/" >Prof. Weijie Su</a> at 
-			University of Pennsylvania and lead a project about A New Theory of Adversarial Examples and Generalization 
-			in Neural Networks (NN) since May 2022. 
+		        Since May 2022, I started working with <a href="http://stat.wharton.upenn.edu/~suw/" >Prof. Weijie Su</a> and
+			<a href="https://hornhehhf.github.io/" >Prof. Hangfeng He</a> at University of Pennsylvania and lead a project 
+			about A New Theory of Adversarial Examples and Generalization in Neural Networks (NN). 
 		    </p>
                     <p>		    		    
 			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan 
