--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     </p>
 		    <p>
 		        Since May 2022, I started working with <a href="http://stat.wharton.upenn.edu/~suw/" >Prof. Weijie Su</a> and
-			<a href="https://hornhehhf.github.io/" >Prof. Hangfeng He</a> at University of Pennsylvania and lead a project 
-			about A New Theory of Adversarial Examples and Generalization in Neural Networks (NN). 
+			<a href="https://hornhehhf.github.io/" >Prof. Hangfeng He</a> at University of Pennsylvania as Research Assistant.
+			I lead a project about A New Theory of Adversarial Examples and Generalization in Neural Networks (NN). 
 		    </p>
                     <p>		    		    
 			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan 
