--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </li>
 			<li>
 			    (5/2021) Accepted in Internship program at <a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" style="text-decoration: none">CLIP</a>
-			    Lab under <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan Boyd-Graber</a>.
+			    Lab under <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan Boyd-Graber</a>!
 			</li>
 			<li>
 			    (5/2021) Preprint paper on [<a href="files/CSCI_5525_Project.pdf" target="_blank">A Survey of Causality in Visual Question Answering</a>], 
