--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			</li>
 			<li>
 		            (8/2021) Joined <a href="http://cs-u-ada.cs.umn.edu/team/" style="text-decoration: none">Minnesota NLP Group</a>
-			    under <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a>!
+			    under <a href="https://dykang.github.io/index.html#section_home" target="_blank">Prof. Dongyeop Kang</a>!
 			</li>
                         <li>
                             (8/2021) Paper on [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
