--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
 			I lead a project about A New Theory of Adversarial Examples and Generalization in Neural Networks (NN). 
 		    </p>
                     <p>		    		    
-			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan 
-			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" >Dr. Saptarashmi 
-			Bandyopadhyay</a> at University of Maryland. Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
-		        style="text-decoration: none">Signal Processing and Information Systems Laboratory</a>, 
-			University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Prof. Mujdat Cetin</a>.
+			Since May 2021, I interned at the <a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" 
+		        style="text-decoration: none">CLIP Lab</a> of University of Maryland Institute for Advanced Computer Studies (UMIACS) 
+			under <a href="http://users.umiacs.umd.edu/~jbg/" >Prof. Jordan Boyd-Graber</a> on improving Neural Question Answering 
+			Systems by leveraging self-supervised question generation.Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
+		        style="text-decoration: none">Signal Processing and Information Systems Laboratory</a>, University of Rochester, 
+			working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Prof. Mujdat Cetin</a>.
                     </p>
 			<!--
                     <p>
@@ -146,6 +147,10 @@
 			    submitted to <a href="https://2023.eacl.org/" style="text-decoration: none"">EACL 2023</a>.
 			</li>
 			<li>
+			    (10/2022) Started the with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> as
+		            Research Assistant at UPenn!
+			</li>
+			<li>
 		            (6/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
 			    Training QA Systems on Transformed Trivia Questions</a>], 
 			    submitted to <a href="https://2022.emnlp.org/" style="text-decoration: none">EMNLP 2022</a>.
@@ -153,6 +158,11 @@
 			<li>
 			    (5/2022) Started working with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> as
 		            Research Assistant at UPenn!
+			</li>
+			<li>
+			    (3/2022) Started the collaboration with <a href="https://yohanjo.github.io/" target="_blank">Dr. Yohan Jo</a> from
+			    <a href="https://www.amazon.science/research-areas/conversational-ai-natural-language-processing" style="text-decoration: none">
+		            Amazon Alexa AI</a> on Debiasing Language Models for In-Context Learning from Causality!
 			</li>
 			<li>
 		            (8/2021) Joined <a href="http://cs-u-ada.cs.umn.edu/team/" style="text-decoration: none">Minnesota NLP Group</a>
@@ -188,6 +198,14 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
                     <h2>Experience</h2>
 			
         <dl>
+          <img class="img-fluid z-depth-1 rounded" src="/img/upenn.png" width='135' height='YYY'>
+	  <dd>Research Assistant</dd>
+          <dt>University of Pennsylvania</dt>
+	  <dd>Advisor: <a href="http://stat.wharton.upenn.edu/~suw/" >Prof. Weijie Su</a>, 
+				    <a href="https://hornhehhf.github.io/" >Prof. Hangfeng He</a></dd>
+	  <dd>May. 2022 - present</dd>
+	  <br>			    
+				    
           <img class="img-fluid z-depth-1 rounded" src="/img/UMN_NLP_logo_final_circle.png" width='135' height='YYY'>
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
@@ -201,9 +219,10 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Research Intern</dd>
           <dt>University of Maryland, College Park</dt>
 	  <dd><a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" 
-		        style="text-decoration: none">CLIP Laboratory</a>, 
-				    Advisor: <a href="http://users.umiacs.umd.edu/~jbg/" title="Jordan Boyd-Graber">Jordan Boyd-Graber</a></dd>
-          <dd>May. 2021 - present</dd>
+		        style="text-decoration: none">CLIP Lab</a>, 
+				    Advisor: <a href="http://users.umiacs.umd.edu/~jbg/" title="Jordan Boyd-Graber">Jordan Boyd-Graber</a>,
+				    <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" >Dr. Saptarashmi Bandyopadhyay</a></dd>
+          <dd>May. 2021 - Jun. 2022</dd>
           <br>
 				    
           <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
@@ -219,7 +238,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 	  <dd>Research Intern</dd>
           <dt>University of Rochester, New York</dt>
 	  <dd><a href="http://labs.sabanciuniv.edu/spis/" 
-		        style="text-decoration: none">Signal Processing and Information Systems Laboratory</a>,
+		        style="text-decoration: none">Signal Processing and Information Systems Lab</a>,
 				    Advisor: <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" title="Mujdat Cetin">Mujdat Cetin</a></dd>
 	  <dd>Jun. 2020 - Oct. 2020</dd>
         </dl>
