--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 			    submitted to <a href="https://2023.eacl.org/" style="text-decoration: none"">EACL 2023</a>.
 			</li>
 			<li>
-			    (10/2022) Started the with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> as
-		            Research Assistant at UPenn!
+			    (10/2022) Started the collaboration with SONY Research within <a href="http://cs-u-ada.cs.umn.edu/team/"
+		            style="text-decoration: none">Minnesota NLP Group</a> for Controllable and Compositional Text Generations!
 			</li>
 			<li>
 		            (6/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
