--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			</li>
 			<li>
 			    (10/2022) Started the collaboration with SONY Research within <a href="http://cs-u-ada.cs.umn.edu/team/"
-		            style="text-decoration: none">Minnesota NLP Group</a> for Controllable and Compositional Text Generations!
+		            style="text-decoration: none">Minnesota NLP Group</a> for Controllable and Compositional Text Generation!
 			</li>
 			<li>
 		            (6/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
