--- a/index.html
+++ b/index.html
@@ -258,8 +258,12 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 				Training QA Systems on Transformed Trivia Questions</a>, 
 				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
                     <h3>2021</h3>
+		      <ul>
+		      <li>
                       <a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>, 
 				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
+		      </li>
+		      Saptarashmi Bandyopadhyay, <b>Hao Zou</b>, Jordan Boyd-Graber, et al.
                 </div>
             </div>
             <hr>
