--- a/index.html
+++ b/index.html
@@ -251,12 +251,20 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
                 <div class="col">
                     <h2>Publications</h2>
 		    <h3>2022</h3>
+				    <ul>
+				    <li>
 		      Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
 				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
+				    </li>
+				    <b>Hao Zou</b>, Karin de Langis, Dongyeop Kang a and Yohan Jo
 			<br>
+				    <li>
 		      <a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
 				Training QA Systems on Transformed Trivia Questions</a>, 
 				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
+				    </li>
+				    Saptarashmi Bandyopadhyay, <b>Hao Zou</b>, Chenqi Zhu, Jordan Boyd-Graber, et al
+				    </ul>
                     <h3>2021</h3>
 		      <ul>
 		      <li>
@@ -264,6 +272,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
 		      </li>
 		      Saptarashmi Bandyopadhyay, <b>Hao Zou</b>, Jordan Boyd-Graber, et al.
+		      </ul>
                 </div>
             </div>
             <hr>
