--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
           <dt>University of Minnesota, Twin Cities</dt>
 	  <dd><a href="https://dykang.github.io/not.html" 
 		        style="text-decoration: none">Minnesota NLP Group</a>, 
-				    Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
+				    Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>,
+				    <a href="https://yohanjo.github.io/" target="_blank">Yohan Jo</a> (Amazon Alexa AI)
 	  <dd>August. 2021 - present</dd>
 	  <br>
 		
