--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
 			    (10/2022) Started the collaboration with SONY Research within <a href="http://cs-u-ada.cs.umn.edu/team/"
 		            style="text-decoration: none">Minnesota NLP Group</a> for Controllable and Compositional Text Generation!
 			</li>
+		        <li>
+			    (09/2022) Accepted to CS Research Mentorship Program <a href="https://research.google/outreach/csrmp/"
+		            style="text-decoration: none">(CSRMP)</a> at Google Research!
+			</li>
 			<li>
 		            (06/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
 			    Training QA Systems on Transformed Trivia Questions</a>], 
