--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
     <head>
         <!-- Hi, this is Nelson. Please DELETE the <script> block below (L6-L13)
           if you use this HTML, otherwise my analytics will track your page. -->
+	    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6JJBYFH6RT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6JJBYFH6RT');
+</script>
+	    
         <title>Hao Zou</title>
   
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
