--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 		      Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
 				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
 				    </li>
-				    <b>Hao Zou</b>, Karin de Langis, Dongyeop Kang a and Yohan Jo
+				    <b>Hao Zou</b>, Karin de Langis, Dongyeop Kang and Yohan Jo
 			<br>
 				    <li>
 		      <a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
