--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
                     <h2>Recent News</h2>
                     <ul>
 			<li>
+		            (02/2023) Serving on the Program Committee for ACL 2023!
+		        </li?
+			<li>
 		            (10/2022) Paper on [<a href="files/EACL_2023_Proceedings_Causality_for_Debiasing_LMs.pdf" target="_blank">
 			    Debiasing Language Models for In-Context Learning by Adapting Causal Inference</a>], 
 			    submitted to <a href="https://2023.eacl.org/" style="text-decoration: none"">EACL 2023</a>.
