--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 		    <h3>2022</h3>
 				    <ul>
 				    <li>
-		      Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
+				    [<a href="files/EACL_2023_Proceedings_Causality_for_Debiasing_LMs.pdf" target="_blank">
+			    Debiasing Language Models for In-Context Learning by Adapting Causal Inference</a>], 
 				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
 				    </li>
 				    <b>Hao Zou</b>, Karin de Langis, Dongyeop Kang and Yohan Jo
