--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
 		            (02/2023) Serving on the Program Committee for ACL 2023!
 			</li>
 			<li>
-		            (10/2022) Paper on [<a href="files/EACL_2023_Proceedings_Causality_for_Debiasing_LMs.pdf" target="_blank">
-			    Debiasing Language Models for In-Context Learning by Adapting Causal Inference</a>], 
+		            (10/2022) Paper on [Debiasing Language Models for In-Context Learning by Adapting Causal Inference],
+				<!-- [<a href="files/EACL_2023_Proceedings_Causality_for_Debiasing_LMs.pdf" target="_blank">
+			    Debiasing Language Models for In-Context Learning by Adapting Causal Inference</a>], -->
 			    submitted to <a href="https://2023.eacl.org/" style="text-decoration: none"">EACL 2023</a>.
 			</li>
 			<li>
@@ -273,8 +274,9 @@ Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang
 		    <h3>2022</h3>
 				    <ul>
 				    <li>
-				    [<a href="files/EACL_2023_Proceedings_Causality_for_Debiasing_LMs.pdf" target="_blank">
-			    Debiasing Language Models for In-Context Learning by Adapting Causal Inference</a>], 
+				    Debiasing Language Models for In-Context Learning by Adapting Causal Inference
+				    <!-- [<a href="files/EACL_2023_Proceedings_Causality_for_Debiasing_LMs.pdf" target="_blank">
+			    Debiasing Language Models for In-Context Learning by Adapting Causal Inference</a>] --> , 
 				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
 				    </li>
 				    <b>Hao Zou</b>, Karin de Langis, Dongyeop Kang and Yohan Jo
