--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col">
                 <p align=center>
                   <a href="mailto:zou00080@umn.edu" style="text-decoration: none"><i class="fa fa-envelope"></i> Email</a> &nbsp/&nbsp
-                  <a href="files/cv.pdf" style="text-decoration: none"><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
+                  <a href="files/20240915_CV.pdf" style="text-decoration: none"><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
                   <a href="https://www.linkedin.com/in/hao-zou-05b447248/" style="text-decoration: none"> <i class="fa fa-linkedin"></i> LinkedIn </a> &nbsp/&nbsp
                   <a href="https://github.com/haozou-official" style="text-decoration: none"> <i class="fa fa-github"></i> GitHub </a> &nbsp/&nbsp
 	          <a href="https://twitter.com/haozou_" style="text-decoration: none"> <i class="fa fa-twitter"></i> Twitter </a>
