--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="images/favicon1.ico">
 	    
-        <link rel="shortcut icon" type="image/png" href="/img/UMN_NLP_logo_final_circle.png"/>
+        <link rel="shortcut icon" type="image/png" href="/img/columbia.png"/>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
