--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    <meta name="author" content="Hao Zou">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
-        <link rel="icon" type="image/png" href="images/favicon1.ico">
+        <link rel="icon" type="image/png" href="/img/columbia.png">
 	    
         <link rel="shortcut icon" type="image/png" href="/img/columbia.png"/>
 
